force-app/main/default/objects/PaymentHighwaySettings__c/PaymentHighwaySettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PaymentHighway Settings</label>
</CustomObject>