force-app/main/default/objects/PaymentHighwaySettings__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <defaultValue>&#39;test&#39;</defaultValue>
    <label>Account</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>