force-app/main/default/objects/PaymentHighwaySettings__c/fields/Key_Id__c.field-meta.xml
<CustomField>
    <fullName>Key_Id__c</fullName>
    <defaultValue>&#39;testKey&#39;</defaultValue>
    <label>Key Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>