force-app/main/default/objects/PaymentHighwaySettings__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <defaultValue>&#39;test_merchantId&#39;</defaultValue>
    <label>Merchant</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>