force-app/main/default/objects/PaymentHighwaySettings__c/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <defaultValue>&#39;testSecret&#39;</defaultValue>
    <label>Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>