force-app/main/default/objects/PaymentHighwaySettings__c/fields/Service_Url__c.field-meta.xml
<CustomField>
    <fullName>Service_Url__c</fullName>
    <defaultValue>&#39;https://v1-hub-staging.sph-test-solinor.com&#39;</defaultValue>
    <label>Service Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>